# gary

./: README.md
gary_bringup/: CMakeLists.txt  README.md  package.xml
gary_bringup/config/dual_shooter_infantry/gary_can/: SocketCANMonitor.yaml
gary_bringup/config/dual_shooter_infantry/gary_chassis/: ChassisTeleop.yaml
gary_bringup/config/dual_shooter_infantry/gary_common/: LifecycleManager.yaml
gary_bringup/config/dual_shooter_infantry/gary_gimbal/: GimbalControl.yaml  GimbalTeleop.yaml
gary_bringup/config/dual_shooter_infantry/ros2_control/: chassis_controllers.yaml  controller_base.yaml  gimbal_controllers.yaml  shoot_controllers.yaml
gary_bringup/config/engineer/gary_can/: SocketCANMonitor.yaml
gary_bringup/config/engineer/gary_chassis/: ChassisTeleop.yaml  MecanumChassisSolver.yaml
gary_bringup/config/engineer/gary_common/: DiagnosticAggregator.yaml  LifecycleManager.yaml
gary_bringup/config/engineer/ros2_control/: chassis_controllers.yaml  liftup_controllers.yaml
gary_bringup/config/sentry/gary_can/: SocketCANMonitor.yaml
gary_bringup/config/sentry/gary_chassis/: ChassisTeleop.yaml  OmniChassisSolver.yaml
gary_bringup/config/sentry/gary_common/: LifecycleManager.yaml
gary_bringup/config/sentry/gary_gimbal/: GimbalControl.yaml  GimbalTeleop.yaml
gary_bringup/config/sentry/gary_shoot/: DR16Forwarder.yaml
gary_bringup/config/sentry/ros2_control/: chassis_controllers.yaml  gimbal_controllers.yaml
gary_bringup/config/single_shooter_infantry/gary_can/: SocketCANMonitor.yaml
gary_bringup/config/single_shooter_infantry/gary_chassis/: MecanumChassisSolver.yaml
gary_bringup/config/single_shooter_infantry/gary_gimbal/: GimbalControl.yaml  GimbalTeleop.yaml
gary_bringup/config/single_shooter_infantry/gary_serial/: DR16Receiver.yaml
gary_bringup/config/single_shooter_infantry/gary_shoot/: DR16Forwarder.yaml  ShooterController.yaml
gary_bringup/config/single_shooter_infantry/ros2_control/: gimbal_controllers.yaml
gary_bringup/launch/: gary_ros2.launch.py
gary_can/: CMakeLists.txt  README.md  package.xml
gary_can/include/gary_can/: socket_can_monitor.hpp  socket_can_receiver.hpp  socket_can_sender.hpp
gary_can/src/: socket_can_monitor.cpp  socket_can_receiver.cpp  socket_can_sender.cpp
gary_chassis/: CMakeLists.txt  README.md  package.xml
gary_chassis/include/gary_chsssis/: chassis_teleop.hpp  mecanum_chassis_solver.hpp
gary_chassis/include/utils/: mecanum_kinematics.hpp
gary_chassis/src/: chassis_teleop.cpp  mecanum_chassis_solver.cpp
gary_chassis/src/utils/: mecanum_kinematics.cpp
gary_common/: CMakeLists.txt  README.md  package.xml
gary_common/include/gary_common/: diagnostic_aggregator.hpp  lifecycle_manager.hpp
gary_common/src/: diagnostic_aggregator.cpp  lifecycle_manager.cpp
gary_controller/: CMakeLists.txt  README.md  gary_controller.xml  package.xml
gary_controller/include/gary_controller/: offline_broadcaster.hpp  pid_controller.hpp
gary_controller/src/: offline_broadcaster.cpp  pid_controller.cpp
gary_description/: CMakeLists.txt  README.md  package.xml
gary_description/urdf/ros2_control/: 2022_single_shooter_infantry.urdf  vision_test.urdf
gary_gimbal/: CMakeLists.txt  README.md  package.xml
gary_gimbal/include/gary_gimbal/: gimbal_control.hpp  gimbal_enter.hpp
gary_gimbal/src/: gimbal_control.cpp  gimbal_enter.cpp  gimbal_test.cpp
gary_hardware/: CMakeLists.txt  README.md  gary_hardware.xml  package.xml
gary_hardware/include/gary_hardware/: rm_imu_sensor.hpp  rm_motor_system.hpp
gary_hardware/include/utils/: fp16_convert.hpp  offline_detector.hpp  rm_motors.hpp
gary_hardware/src/: rm_imu_sensor.cpp  rm_motor_system.cpp
gary_hardware/src/utils/: fp16_convert.cpp  offline_detector.cpp  rm_motors.cpp
gary_liftup/: README.md
gary_ros2/: CMakeLists.txt  README.md  package.xml
gary_rqt/: .gitignore  LICENSES  README.md  package.xml  setup.cfg  setup.py
gary_serial/: CMakeLists.txt  README.md  package.xml
gary_serial/include/gary_serial/: dr16_receiver.hpp
gary_serial/src/: dr16_receiver.cpp
gary_shoot/: CMakeLists.txt  README.md  package.xml
gary_shoot/include/gary_shoot/: dr16_forwarder.hpp  shooter_controller.hpp
gary_shoot/src/: dr16_forwarder.cpp  heat_controller.cpp  shooter_controller.cpp
gary_simulation/: README.md
gary_ui/: README.md
