<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gary_ros2</name>
  <version>0.0.1</version>
  <description>metapackage of G.A.R.Y.</description>
  <maintainer email="i@myaki.moe">myaki</maintainer>
  <maintainer email="williamyxn@gmail.com">Williamyxn</maintainer>
  <maintainer email="juntong_2021@outlook.com">Juntong</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gary_bringup</depend>
  <depend>gary_can</depend>
  <depend>gary_common</depend>
  <depend>gary_controller</depend>
  <depend>gary_description</depend>
  <depend>gary_hardware</depend>
  <depend>gary_msgs</depend>
  <depend>gary_serial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
